--- a/res/admin/css/style.less
+++ b/res/admin/css/style.less
@@ -4,6 +4,10 @@
 	font-family: Helvetica, Arial, sans;
 }
 
+body {
+	font-size: 1.1em;
+}
+
 #main-header {
 	background-color: #fff;
 	border-bottom: 1px #ddd solid;
@@ -31,5 +35,5 @@
 }
 
 a {
-	color: #090;
+	color: #080;
 }
