--- a/res/admin/css/style.css
+++ b/res/admin/css/style.css
@@ -1,32 +1,1 @@
-* {
-  margin: 0px;
-  padding: 0px;
-  font-family: Helvetica, Arial, sans;
-}
-body {
-  font-size: 1.1em;
-}
-#main-header {
-  background-color: #fff;
-  border-bottom: 1px #ddd solid;
-  padding: 8px;
-  margin-bottom: 16px;
-}
-#main-header a {
-  font-size: 1.5em;
-  color: #000;
-  text-decoration: none;
-  padding: 0px 8px;
-}
-#main-header a:hover {
-  text-decoration: underline;
-}
-#main-header nav {
-  float: right;
-}
-#page-wrap {
-  margin: 16px;
-}
-a {
-  color: #080;
-}
+* { margin: 0px; padding: 0px; font-family: Helvetica, Arial, sans; } body { font-size: 1.1em; } .page-header { background-color: #00a000; padding: 8px; } .page-header a { color: #fff; text-decoration: none; padding: 0px 8px; } .page-header a:hover { text-decoration: underline; } .page-header nav { float: right; } #main-header { background-color: #00a000; padding: 8px; } #main-header a { color: #fff; text-decoration: none; padding: 0px 8px; } #main-header a:hover { text-decoration: underline; } #main-header nav { float: right; } #main-header a { font-size: 1.5em; } #main-bottom-header { background-color: #00a000; padding: 8px; background-color: #00b000; } #main-bottom-header a { color: #fff; text-decoration: none; padding: 0px 8px; } #main-bottom-header a:hover { text-decoration: underline; } #main-bottom-header nav { float: right; } a { color: #00a000; } .pad { padding: 16px; } .editor-area { padding: 16px; outline: none; word-wrap: break-word; font: inherit; color: inherit; } 
