--- a/res/admin/pages-edit.tt
+++ b/res/admin/pages-edit.tt
@@ -1,5 +1,15 @@
 [% INCLUDE header.tt %]
 
+<header id="main-bottom-header">
+	<a>%FILE%</a>
+	<a class="ajax-result"></a>
+	<nav>
+		<a href="">%DISCARDSTR%</a>
+		<a id="save-btn">%SAVESTR%</a>
+	</nav>
+</header>
+<div contenteditable class="editor-area">
 %PAGEDATA%
+</div>
 
 [% INCLUDE footer.tt %]
