Stable page saving

--- a/res/admin/css/style.less
+++ b/res/admin/css/style.less
@@ -4,8 +4,10 @@
 	font-family: Helvetica, Arial, sans;
 }
 
-body {
+html, body {
 	font-size: 1.1em;
+	min-height: 100%;
+	height: 100%;
 }
 
 .page-header {
@@ -40,6 +42,7 @@ body {
 }
 
 #page-wrap {
+	height: 100%;
 }
 
 a {
@@ -56,4 +59,5 @@ a {
 	word-wrap: break-word;
 	font: inherit;
 	color: inherit;
+	height: 100%;
 }
