HTML special characters handling

--- a/res/site/pages/test.tt
+++ b/res/site/pages/test.tt
@@ -1,58 +1,11 @@
-<div id="lipsum">
-<p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. In commodo 
-placerat felis a lobortis. In malesuada, purus vel sollicitudin 
-malesuada, metus nunc pretium magna, nec fringilla ex dui consequat sem.
- Etiam in faucibus mi. Nullam bibendum tincidunt luctus. Duis velit 
-neque, mollis vitae sollicitudin at, facilisis quis nibh. Pellentesque 
-habitant morbi tristique senectus et netus et malesuada fames ac turpis 
-egestas. Sed ante sem, convallis ac varius consectetur, pulvinar in 
-elit. Fusce a lorem scelerisque, iaculis leo maximus, volutpat lectus. 
-Proin at purus posuere, tincidunt augue eget, imperdiet eros.
-</p>
-<p>
-Pellentesque iaculis orci sed ultrices imperdiet. Vivamus sit amet 
-mollis ex. Duis vulputate nibh sit amet sapien vehicula vulputate. Duis 
-condimentum et arcu sit amet volutpat. Mauris mauris felis, fermentum a 
-ipsum quis, semper pharetra arcu. Vivamus sed eleifend augue. Vestibulum
- posuere rutrum lectus ac semper. Aliquam pellentesque ante ut dapibus 
-dapibus. Sed lobortis aliquet justo, vitae varius justo consectetur non.
- Quisque eu ante sit amet quam dignissim volutpat et sit amet augue. 
-Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
- cubilia Curae;
-</p>
-<p>
-Mauris malesuada euismod eros id fringilla. Duis sollicitudin augue ac 
-magna mattis lacinia. Etiam dapibus hendrerit dui nec ullamcorper. 
-Nullam convallis lectus id dapibus efficitur. Fusce ut tortor faucibus 
-ex pretium feugiat. Quisque id posuere augue, ac elementum tellus. 
-Nullam porta magna eu dui lobortis consectetur. Aenean porta, nulla ac 
-rhoncus condimentum, mauris risus malesuada dolor, eget tempus justo 
-urna eu leo. Quisque molestie ante non arcu efficitur ultrices. Integer a
- libero at felis luctus porta. Etiam libero justo, molestie non 
-tincidunt sit amet, scelerisque quis sapien.
-</p>
-<p>
-Donec non urna arcu. Nam at laoreet tortor. Duis hendrerit mauris ac leo
- ornare eleifend non nec purus. Interdum et malesuada fames ac ante 
-ipsum primis in faucibus. Pellentesque aliquet eros enim, sed finibus 
-sapien semper ultricies. Vestibulum congue leo sit amet risus 
-sollicitudin feugiat. Phasellus laoreet cursus eros sit amet pharetra. 
-Sed orci nisi, vehicula viverra ornare quis, fermentum vestibulum sem. 
-Praesent sollicitudin vitae velit ac iaculis. Maecenas viverra sem quis 
-malesuada aliquet. Ut volutpat velit non est vulputate faucibus non eu 
-turpis. Fusce rhoncus nisl a magna semper porttitor.
-</p>
-<p>
-Nunc elementum quis neque eget interdum. Aenean nulla enim, cursus vitae
- gravida aliquam, ornare et enim. Phasellus facilisis, leo sit amet 
-rutrum dapibus, justo arcu auctor neque, a ornare lorem augue ornare 
-arcu. Curabitur eleifend, odio at gravida iaculis, lacus velit porta 
-quam, ut ornare est augue ac arcu. Integer rhoncus, eros quis tempus 
-consequat, dolor massa ornare justo, vitae viverra tellus turpis sit 
-amet justo. Aliquam pellentesque augue et mi consectetur, sed lobortis 
-leo vestibulum. Integer at pulvinar erat. Donec enim erat, tristique 
-quis urna eget, mattis pretium mi. Cras vulputate lorem pulvinar lorem 
-dignissim, et elementum nulla pharetra. Sed mi odio, facilisis eget 
-semper eu, rhoncus malesuada turpis.
-</p></div>
+ test
+test       so test
+
+              wow          such test
+
+many test
+
+<div class="pony">
+TWILIGHT
+</div>
+ 
