--- a/res/admin/css/style.less
+++ b/res/admin/css/style.less
@@ -4,10 +4,8 @@
 	font-family: Helvetica, Arial, sans;
 }
 
-html, body {
+body {
 	font-size: 1.1em;
-	min-height: 100%;
-	height: 100%;
 }
 
 .page-header {
@@ -41,10 +39,6 @@ html, body {
 	background-color: #00b000;
 }
 
-#page-wrap {
-	height: 100%;
-}
-
 a {
 	color: #00a000;
 }
@@ -57,7 +51,4 @@ a {
 	.pad;
 	outline: none;
 	word-wrap: break-word;
-	font: inherit;
-	color: inherit;
-	height: 100%;
 }
