--- a/res/admin/css/style.less
+++ b/res/admin/css/style.less
@@ -47,8 +47,39 @@ a {
 	padding: 16px;
 }
 
+.editor-wrap {
+	width: 100%;
+	height: 100%;
+	table-layout: fixed;
+
+	td {
+		vertical-align: top;
+		border: none;
+	}
+}
+
+.editor-label {
+	.pad;
+	border-top: 1px #aaa dashed;
+	text-align: center;
+}
+
 .editor-area {
 	.pad;
 	outline: none;
 	word-wrap: break-word;
+	box-shadow: inset 0px 0px 4px #aaa;
+
+	&:focus {
+		box-shadow: inset 0px 0px 4px #000;
+	}
+}
+
+.editor-result {
+	.pad;
+	box-shadow: inset 0px 0px 4px #aaa;
+
+	&:focus {
+		box-shadow: inset 0px 0px 4px #000;
+	}
 }
