--- a/res/admin/css/style.less
+++ b/res/admin/css/style.less
@@ -17,6 +17,10 @@ a {
 	}
 }
 
+table {
+	width: 100%;
+}
+
 button {
 	color: #fff;
 	background-color: #00a000;
@@ -64,6 +68,11 @@ button {
 	padding: 16px;
 }
 
+.delete-btn {
+	float: right;
+	text-align: right;
+}
+
 .editor-wrap {
 	width: 100%;
 	height: 100%;
@@ -98,5 +107,24 @@ button {
 
 	&:focus {
 		box-shadow: inset 0px 0px 4px #000;
+	}
+
+	p, h1, h2, h3, h4, h5, h6 {
+		margin: 8px 0px;
+	}
+
+	table {
+		border-collapse: collapse;
+
+		caption {
+			background-color: #00a000;
+			color: #fff;
+			padding: 8px;
+		}
+
+		td {
+			border: 1px #00a000 solid;
+			padding: 8px;
+		}
 	}
 }
