--- a/res/admin/css/style.less
+++ b/res/admin/css/style.less
@@ -89,6 +89,13 @@ input[type=text] {
 	padding: 16px;
 }
 
+.intext-block {
+	padding: 8px;
+	background-color: #00a000;
+	color: #fff;
+	margin: 8px 0px;
+}
+
 .editor-wrap {
 	width: 100%;
 	height: 100%;
