--- a/res/admin/css/style.less
+++ b/res/admin/css/style.less
@@ -49,13 +49,21 @@ input[type=text] {
 	background-color: #00a000;
 	padding: 8px;
 
+	nav {
+		float: right;
+	}
+
 	a {
 		color: #fff;
 		padding: 0px 8px;
 	}
 
-	nav {
-		float: right;
+	form {
+		display: inline-block;
+	}
+
+	input {
+		color: #fff;
 	}
 }
 
@@ -94,6 +102,12 @@ input[type=text] {
 	background-color: #00a000;
 	color: #fff;
 	margin: 8px 0px;
+}
+
+.editor-image-wrap img {
+	margin: 16px;
+	max-width: 100%;
+	border: 1px #00a000 dashed;
 }
 
 .editor-wrap {
