--- a/res/admin/css/style.less
+++ b/res/admin/css/style.less
@@ -11,6 +11,7 @@ body {
 a {
 	color: #00a000;
 	text-decoration: none;
+	cursor: pointer;
 
 	&:hover {
 		text-decoration: underline;
@@ -28,6 +29,7 @@ button, input[type=submit] {
 	font: inherit;
 	padding: 4px;
 	border: 1px #008000 solid;
+	cursor: pointer;
 
 	&:hover {
 		background-color: #00b000;
@@ -104,12 +106,6 @@ input[type=text] {
 	margin: 8px 0px;
 }
 
-.editor-image-wrap img {
-	margin: 16px;
-	max-width: 100%;
-	border: 1px #00a000 dashed;
-}
-
 .editor-wrap {
 	width: 100%;
 	height: 100%;
@@ -118,6 +114,10 @@ input[type=text] {
 	td {
 		vertical-align: top;
 		border: none;
+	}
+
+	img {
+		max-width: 100%;
 	}
 }
 
