Files list webgui

--- a/web/rcms/templates/lsfilesItem.html
+++ b/web/rcms/templates/lsfilesItem.html
@@ -1,6 +1,8 @@
-<div class="block-list__item file-entry">
-	<div class="file-entry__arrow"><!-- &#9654; --><!-- &#9660; --></div>
-	<a class="file-entry__title"></a>
-	<div class="file-entry__desc"></div>
-	<div class="file-entry__children"></div>
+<div class="file-entry">
+	<div class="block-list__item">
+		<div class="file-entry__arrow"></div>
+		<div class="file-entry__title"></div>
+		<div class="file-entry__desc"></div>
+	</div>
+	<div class="file-entry__children file-entry__children--folded"></div>
 </div>
