--- a/web/rcms/templates/editor.html
+++ b/web/rcms/templates/editor.html
@@ -1,13 +1,12 @@
-<header class="top-bar">
-	<div class="top-bar__back-button">&#8678;</div>
+<header class="top-bar top-bar--fixed">
+	<div class="top-bar__back-button"></div>
 	<div class="top-bar__title"></div>
-	<div class="top-bar__tabs"></div>
+	<div class="top-bar__buttons">
+		<div class="top-bar__tabs">
+			<span class="_WebGUI.getStr" data-webgui-getstr="Views"></span>:
+		</div>
+		<div class="top-bar__buttons__button"><span class="_WebGUI.getStr" data-webgui-getstr="Publish"></span></div>
+	</div>
 </header>
 <main class="editor-main">
 </main>
-<footer class="status-bar">
-	<div class="status-bar__status"></div>
-	<div class="status-bar__buttons">
-		<div class="status-bar__buttons__button">Publish</div>
-	</div>
-</footer>
