--- a/web/rcms/templates/lsfiles.html
+++ b/web/rcms/templates/lsfiles.html
@@ -1,4 +1,4 @@
 <header class="top-bar">
-	<div class="top-bar__title"></div>
+	<div class="top-bar__title"><span class="_WebGUI.getStr" data-webgui-getstr="Files list"></span></div>
 </header>
 <main class="block-list"></main>
