--- a/web/rcms/templates/lsfilesItem.html
+++ b/web/rcms/templates/lsfilesItem.html
@@ -1,8 +1,14 @@
 <div class="file-entry">
 	<div class="block-list__item">
-		<div class="file-entry__arrow"></div>
-		<div class="file-entry__title"></div>
-		<div class="file-entry__desc"></div>
+		<div class="file-entry__clickable-space">
+			<div class="file-entry__arrow"></div>
+			<div class="file-entry__title"></div>
+			<div class="file-entry__desc"></div>
+		</div>
+		<div class="file-entry__buttons">
+			<div class="file-entry__buttons__button file-entry__buttons__button--hidden"><span class="_WebGUI.getStr" data-webgui-getstr="Open in new tab"></span>
+			</div>
+		</div>
 	</div>
 	<div class="file-entry__children file-entry__children--folded"></div>
 </div>
