--- a/web/rcms/blocks/file-entry.styl
+++ b/web/rcms/blocks/file-entry.styl
@@ -1,23 +1,45 @@
 .file-entry
+	&__clickable-space
+		display inline
+		cursor pointer
+		width 100%
+
 	&__arrow
 		display inline
 
-		&:after
+		&:before
 			content "·\00a0"
 
-		&--folded:after
+		&--folded:before
 			content "▸"
 
-		&--unfolded:after
+		&--unfolded:before
 			content "▾"
 
 	&__title
 		display inline
-		cursor pointer
 
 	&__desc
 		display inline
 		color #aaa
+
+	&__buttons
+		display inline
+		float right
+
+		&__button
+			display inline
+			padding 4px 8px
+			border 1px solid #aaa
+			border-radius 4px
+			cursor pointer
+			transition-duration 0.5s
+
+			&:hover
+				background-color #dfb
+
+			&--hidden
+				display none
 
 	&__children
 		margin-left 16px
