Plain text editor

--- a/web/rcms/global/global.styl
+++ b/web/rcms/global/global.styl
@@ -4,5 +4,6 @@ html, body
 	line-height 1.2em
 
 [contenteditable=true]:empty:before
-	content attr(placeholder)
 	display block
+	content attr(placeholder)
+	color #aaa
