--- a/web/rcms/templates/editor.html
+++ b/web/rcms/templates/editor.html
@@ -1,6 +1,7 @@
 <header class="top-bar top-bar--fixed">
 	<div class="top-bar__back-button"></div>
 	<div class="top-bar__title"></div>
+	<div class="top-bar__desc"></div>
 	<div class="top-bar__buttons">
 		<div class="top-bar__tabs">
 			<span class="_WebGUI.getStr" data-webgui-getstr="Views"></span>:
