--- a/web/rcms/templates/lsfilesItem.html
+++ b/web/rcms/templates/lsfilesItem.html
@@ -6,8 +6,10 @@
 			<div class="file-entry__desc"></div>
 		</div>
 		<div class="file-entry__buttons">
-			<div class="file-entry__buttons__button file-entry__buttons__button--hidden"><span class="_WebGUI.getStr" data-webgui-getstr="Open in new tab"></span>
-			</div>
+			<div class="file-entry__buttons__button file-entry__buttons__button--openintab file-entry__buttons__button--hidden"><span class="_WebGUI.getStr" data-webgui-getstr="Open in new tab"></span></div>
+			<div class="file-entry__buttons__button file-entry__buttons__button--newfile file-entry__buttons__button--hidden"><span class="_WebGUI.getStr" data-webgui-getstr="New file"></span></div>
+			<div class="file-entry__buttons__button file-entry__buttons__button--move"><span class="_WebGUI.getStr" data-webgui-getstr="Move"></span></div>
+			<div class="file-entry__buttons__button file-entry__buttons__button--delete"><span class="_WebGUI.getStr" data-webgui-getstr="Delete"></span></div>
 		</div>
 	</div>
 	<div class="file-entry__children file-entry__children--folded"></div>
