--- a/web/rcms/blocks/top-bar.styl
+++ b/web/rcms/blocks/top-bar.styl
@@ -25,6 +25,10 @@
 		display inline
 		font-size 1.25em
 
+	&__desc
+		display inline
+		margin-left 64px
+
 	&__buttons
 		display inline
 		float right
@@ -33,10 +37,11 @@
 			display inline
 			cursor pointer
 			font-size 1.25em
+			margin 0 8px
 
 	&__tabs
 		display inline
-		margin-right 64px
+		margin-right 56px
 
 		&__tab
 			display inline
@@ -50,7 +55,7 @@
 			cursor pointer
 
 			&--active
-				padding 8px 12px 16px 8px
+				padding 8px 12px 16px 12px
 				color #000
 				background-color #fff
 				border-color #fff
