File uploading and better plain text editor

--- a/web/rcms/templates/editor.html
+++ b/web/rcms/templates/editor.html
@@ -6,7 +6,7 @@
 		<div class="top-bar__tabs">
 			<span class="_WebGUI.getStr" data-webgui-getstr="Views"></span>:
 		</div>
-		<div class="top-bar__buttons__button"><span class="_WebGUI.getStr" data-webgui-getstr="Publish"></span></div>
+		<div class="top-bar__buttons__button top-bar__buttons__button--publish"><span class="_WebGUI.getStr" data-webgui-getstr="Publish"></span></div>
 	</div>
 </header>
 <main class="editor-main">
