--- a/web/rcms/templates/editor.html
+++ b/web/rcms/templates/editor.html
@@ -6,8 +6,10 @@
 		<div class="top-bar__tabs">
 			<span class="_WebGUI.getStr" data-webgui-getstr="Views"></span>:
 		</div>
-		<div class="top-bar__buttons__button top-bar__buttons__button--publish"><span class="_WebGUI.getStr" data-webgui-getstr="Publish"></span></div>
+		<div class="top-bar__buttons__button top-bar__buttons__button--edittitle _WebGUI.getStr" data-webgui-getstr="Edit title"></div>
+		<div class="top-bar__buttons__button top-bar__buttons__button--publish _WebGUI.getStr" data-webgui-getstr="Publish"></div>
 	</div>
 </header>
+<div style="height: 42px"></div>
 <main class="editor-main">
 </main>
