--- a/web/rcms/templates/lsfiles.html
+++ b/web/rcms/templates/lsfiles.html
@@ -1,8 +1,8 @@
 <header class="top-bar">
 	<div class="top-bar__title"><span class="_WebGUI.getStr" data-webgui-getstr="Files list"></span></div>
 	<div class="top-bar__buttons">
-		<div class="top-bar__buttons__button"><span class="_WebGUI.getStr" data-webgui-getstr="New file"></span></div>
-		<div class="top-bar__buttons__button"><span class="_WebGUI.getStr" data-webgui-getstr="New folder"></span></div>
+		<div class="top-bar__buttons__button top-bar__buttons__button--newfile _WebGUI.getStr" data-webgui-getstr="New file"></div>
+		<div class="top-bar__buttons__button top-bar__buttons__button--newfolder _WebGUI.getStr" data-webgui-getstr="New folder"></div>
 	</div>
 </header>
 <main class="block-list"></main>
