--- a/web/rcms/templates/lsfilesItem.html
+++ b/web/rcms/templates/lsfilesItem.html
@@ -1,15 +1,15 @@
 <div class="file-entry">
 	<div class="block-list__item">
-		<div class="file-entry__clickable-space">
+		<div class="file-entry__clickable-space" draggable="true">
 			<div class="file-entry__arrow"></div>
 			<div class="file-entry__title"></div>
 			<div class="file-entry__desc"></div>
 		</div>
 		<div class="file-entry__buttons">
-			<div class="file-entry__buttons__button file-entry__buttons__button--openintab file-entry__buttons__button--hidden"><span class="_WebGUI.getStr" data-webgui-getstr="Open in new tab"></span></div>
-			<div class="file-entry__buttons__button file-entry__buttons__button--newfile file-entry__buttons__button--hidden"><span class="_WebGUI.getStr" data-webgui-getstr="New file"></span></div>
-			<div class="file-entry__buttons__button file-entry__buttons__button--move"><span class="_WebGUI.getStr" data-webgui-getstr="Move"></span></div>
-			<div class="file-entry__buttons__button file-entry__buttons__button--delete"><span class="_WebGUI.getStr" data-webgui-getstr="Delete"></span></div>
+			<div class="file-entry__buttons__button file-entry__buttons__button--openintab file-entry__buttons__button--hidden _WebGUI.getStr" data-webgui-getstr="Open in new tab"></div>
+			<div class="file-entry__buttons__button file-entry__buttons__button--newfile file-entry__buttons__button--hidden _WebGUI.getStr" data-webgui-getstr="New file"></div>
+			<div class="file-entry__buttons__button file-entry__buttons__button--newfolder file-entry__buttons__button--hidden _WebGUI.getStr" data-webgui-getstr="New folder"></div>
+			<div class="file-entry__buttons__button file-entry__buttons__button--delete _WebGUI.getStr" data-webgui-getstr="Delete"></div>
 		</div>
 	</div>
 	<div class="file-entry__children file-entry__children--folded"></div>
