Markdown WYSIWYG editor

--- a/web/rcms/blocks/file-entry.styl
+++ b/web/rcms/blocks/file-entry.styl
@@ -8,6 +8,7 @@
 
 	&__arrow
 		display inline
+		margin-right 4px
 
 		&:before
 			content "·\00a0"
@@ -33,6 +34,7 @@
 		&__button
 			display inline
 			padding 4px 8px
+			margin 0 2px
 			border 1px solid #aaa
 			border-radius 4px
 			cursor pointer
