--- a/web/rcms/templates/editor.html
+++ b/web/rcms/templates/editor.html
@@ -4,7 +4,7 @@
 	<div class="top-bar__desc"></div>
 	<div class="top-bar__buttons">
 		<div class="top-bar__tabs">
-			<span class="_WebGUI.getStr" data-webgui-getstr="Views"></span>:
+			<span class="_WebGUI.getStr" data-webgui-getstr="Views"></span>:&nbsp;
 		</div>
 		<div class="top-bar__buttons__button top-bar__buttons__button--edittitle _WebGUI.getStr" data-webgui-getstr="Edit title"></div>
 		<div class="top-bar__buttons__button top-bar__buttons__button--publish _WebGUI.getStr" data-webgui-getstr="Publish"></div>
