--- a/web/markdownWysiwygEditor/templates/mwfe.html
+++ b/web/markdownWysiwygEditor/templates/mwfe.html
@@ -1,21 +1,23 @@
 <div class="mwfe">
 	<div class="mwfe__toolbar">
-		<div class="mwfe__toolbar__item mwfe__toolbar__item--bold" title="Bold"></div>
-		<div class="mwfe__toolbar__item mwfe__toolbar__item--italic" title="Italic"></div>
-		<div class="mwfe__toolbar__item mwfe__toolbar__item--underline" title="Underline"></div>
-		<div class="mwfe__toolbar__item mwfe__toolbar__item--strikethrough" title="Strikethrough"></div>
-		<div class="mwfe__toolbar__item mwfe__toolbar__item--ul" title="Unordered list"></div>
-		<div class="mwfe__toolbar__item mwfe__toolbar__item--ol" title="Ordered list"></div>
-		<div class="mwfe__toolbar__item mwfe__toolbar__item--link" title="Link"></div>
-		<div class="mwfe__toolbar__item mwfe__toolbar__item--image" title="Image"></div>
-		<div class="mwfe__toolbar__item mwfe__toolbar__item--quote" title="Quote"></div>
-		<div class="mwfe__toolbar__item mwfe__toolbar__item--code" title="Code"></div>
-		<div class="mwfe__toolbar__item mwfe__toolbar__item--hr" title="Horizontal line"></div>
-		<div class="mwfe__toolbar__item mwfe__toolbar__item--h2" title="Heading 2"></div>
-		<div class="mwfe__toolbar__item mwfe__toolbar__item--h3" title="Heading 3"></div>
-		<div class="mwfe__toolbar__item mwfe__toolbar__item--h4" title="Heading 4"></div>
-		<div class="mwfe__toolbar__item mwfe__toolbar__item--h5" title="Heading 5"></div>
-		<div class="mwfe__toolbar__item mwfe__toolbar__item--h6" title="Heading 6"></div>
+		<div class="mwfe__toolbar__item mwfe__toolbar__item--bold _WebGUI.getStr" data-webgui-getstr-dest="title" data-webgui-getstr="Bold"></div>
+		<div class="mwfe__toolbar__item mwfe__toolbar__item--italic _WebGUI.getStr" data-webgui-getstr-dest="title" data-webgui-getstr="Italic"></div>
+		<div class="mwfe__toolbar__item mwfe__toolbar__item--underline _WebGUI.getStr" data-webgui-getstr-dest="title" data-webgui-getstr="Underline"></div>
+		<div class="mwfe__toolbar__item mwfe__toolbar__item--strikethrough _WebGUI.getStr" data-webgui-getstr-dest="title" data-webgui-getstr="Strikethrough"></div>
+		<div class="mwfe__toolbar__item mwfe__toolbar__item--ul _WebGUI.getStr" data-webgui-getstr-dest="title" data-webgui-getstr="Unordered list"></div>
+		<div class="mwfe__toolbar__item mwfe__toolbar__item--ol _WebGUI.getStr" data-webgui-getstr-dest="title" data-webgui-getstr="Ordered list"></div>
+		<div class="mwfe__toolbar__item mwfe__toolbar__item--link _WebGUI.getStr" data-webgui-getstr-dest="title" data-webgui-getstr="Link"></div>
+		<div class="mwfe__toolbar__item mwfe__toolbar__item--image _WebGUI.getStr" data-webgui-getstr-dest="title" data-webgui-getstr="Image"></div>
+		<div class="mwfe__toolbar__item mwfe__toolbar__item--quote _WebGUI.getStr" data-webgui-getstr-dest="title" data-webgui-getstr="Quote"></div>
+		<div class="mwfe__toolbar__item mwfe__toolbar__item--code _WebGUI.getStr" data-webgui-getstr-dest="title" data-webgui-getstr="Code"></div>
+		<div class="mwfe__toolbar__item mwfe__toolbar__item--hr _WebGUI.getStr" data-webgui-getstr-dest="title" data-webgui-getstr="Horizontal line"></div>
+		<div class="mwfe__toolbar__item mwfe__toolbar__item--table _WebGUI.getStr" data-webgui-getstr-dest="title" data-webgui-getstr="Table"></div>
+		<div class="mwfe__toolbar__item mwfe__toolbar__item--h2 _WebGUI.getStr" data-webgui-getstr-dest="title" data-webgui-getstr="Heading 2"></div>
+		<div class="mwfe__toolbar__item mwfe__toolbar__item--h3 _WebGUI.getStr" data-webgui-getstr-dest="title" data-webgui-getstr="Heading 3"></div>
+		<div class="mwfe__toolbar__item mwfe__toolbar__item--h4 _WebGUI.getStr" data-webgui-getstr-dest="title" data-webgui-getstr="Heading 4"></div>
+		<div class="mwfe__toolbar__item mwfe__toolbar__item--h5 _WebGUI.getStr" data-webgui-getstr-dest="title" data-webgui-getstr="Heading 5"></div>
+		<div class="mwfe__toolbar__item mwfe__toolbar__item--h6 _WebGUI.getStr" data-webgui-getstr-dest="title" data-webgui-getstr="Heading 6"></div>
 	</div>
-	<div class="mwfe__main" placeholder="Enter some text here..." contenteditable="true"></div>
+	<div style="height: 33px"></div>
+	<div class="mwfe__main _WebGUI.getStr" data-webgui-getstr-dest="placeholder" data-webgui-getstr="Enter some text here..." contenteditable="true"></div>
 </div>
