--- a/web/rcms/blocks/top-bar.styl
+++ b/web/rcms/blocks/top-bar.styl
@@ -10,6 +10,7 @@
 		position fixed
 		left 0
 		top 0
+		z-index 99
 		transform translateZ(0)
 		backface-visibility hidden
 
@@ -28,7 +29,7 @@
 
 	&__desc
 		display inline
-		margin-left 64px
+		margin-left 20px
 
 	&__buttons
 		display inline
@@ -42,7 +43,7 @@
 
 	&__tabs
 		display inline
-		margin-right 56px
+		margin-right 8px
 
 		&__tab
 			display inline
