--- a/web/rcms/global/global.styl
+++ b/web/rcms/global/global.styl
@@ -1,7 +1,10 @@
-html, body
+html
 	font-family Tahoma, Verdana, Helvetica, Arial, sans-serif
-	margin 0
 	line-height 1.2em
+	overflow-y: scroll
+
+body
+	margin 0
 
 [contenteditable=true]:empty:before
 	display block
