--- a/web/rcms/templates/editor.html
+++ b/web/rcms/templates/editor.html
@@ -10,6 +10,5 @@
 		<div class="top-bar__buttons__button top-bar__buttons__button--publish _WebGUI.getStr" data-webgui-getstr="Publish"></div>
 	</div>
 </header>
-<div style="height: 42px"></div>
-<main class="editor-main">
-</main>
+<div style="height: 41px"></div>
+<main class="editor-main"></main>
