Some minor features and fixes

--- a/web/rcms/templates/editor.html
+++ b/web/rcms/templates/editor.html
@@ -6,7 +6,7 @@
 		<div class="top-bar__tabs">
 			<span class="_WebGUI.getStr" data-webgui-getstr="Views"></span>:&nbsp;
 		</div>
-		<div class="top-bar__buttons__button top-bar__buttons__button--edittitle _WebGUI.getStr" data-webgui-getstr="Edit title"></div>
+		<div class="top-bar__buttons__button top-bar__buttons__button--rename _WebGUI.getStr" data-webgui-getstr="Rename"></div>
 		<div class="top-bar__buttons__button top-bar__buttons__button--publish _WebGUI.getStr" data-webgui-getstr="Publish"></div>
 	</div>
 </header>
